update .gitignore to include additional files and directories

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
 .env
+package-lock.json
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+*.pyc
+.Python
+env/
+venv/
+ENV/
+build/
+dist/
+*.egg-info/
+*.egg
